2010-10-09  Pratik Solanki  <psolanki@apple.com>

        Reviewed by Xan Lopez.

        https://bugs.webkit.org/show_bug.cgi?id=47445
        Remove unused function WTFThreadData::initializeIdentifierTable()

        * wtf/WTFThreadData.h:

2010-10-08  Michael Saboff  <msaboff@apple.com>

        Reviewed by Darin Adler.

        Added check to start of subexpression being positive before using
        subexpression in replacement.
        https://bugs.webkit.org/show_bug.cgi?id=47324

        * runtime/StringPrototype.cpp:
        (JSC::substituteBackreferencesSlow):

2010-10-08  Chris Evans  <cevans@google.com>

        Reviewed by David Levin.

        https://bugs.webkit.org/show_bug.cgi?id=47393

        Use unsigned consistently to check for max StringImpl length.
        Add a few integer overflow checks.
        Uses the existing paradigm of CRASH() when we can't reasonably handle a crazily large request.

        * wtf/text/WTFString.cpp:
        * wtf/text/StringImpl.h:
        * wtf/text/StringImpl.cpp:
        Better use of size_t vs. unsigned; check for integer overflows.

2010-10-07  David Goodwin  <david_goodwin@apple.com>

        Reviewed by Oliver Hunt.

        ARM JIT generates undefined operations due to partially uninitialized ShiftTypeAndAmount
        https://bugs.webkit.org/show_bug.cgi?id=47356

        * assembler/ARMv7Assembler.h:

2010-10-06  Chris Evans  <cevans@google.com>

        Reviewed by David Levin.

        https://bugs.webkit.org/show_bug.cgi?id=47248

        Use size_t consistently in CString, to prevent theoretical trouble
        with > 4GB strings on 64-bit platforms.

        * wtf/text/CString.h:
        * wtf/text/CString.cpp:
        Use size_t for string lengths.
        * wtf/MD5.cpp:
        (WTF::expectMD5): use suitable format string + cast for size_t.
        * JavaScriptCore.exp:
        Update symbol name.

2010-10-06  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig.
